fix(toolbar-style): Add gradient to top toolbar, blurred styling

--- a/internal_packages/message-list/stylesheets/message-list.less
+++ b/internal_packages/message-list/stylesheets/message-list.less
@@ -69,6 +69,7 @@
   }
   .message-subject {
     font-size: @font-size-large;
+    color: @text-color;
   }
   .message-count {
     float: right;
@@ -119,7 +120,7 @@
 
     margin: @message-spacing auto;
     padding: 0;
-    
+
     background: @background-primary;
     border: 0;
     box-shadow: 0 0 0.5px rgba(0, 0, 0, 0.28), 0 1px 1.5px rgba(0, 0, 0, 0.08);
